--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -67,6 +67,10 @@
   font-weight: 900 !important;
   margin: 0;
   padding: 50px 0 30px;
+
+  @media (max-width: 780px) {
+    font-size: 30px !important;
+  }
 }
 
 .sortBtnWrapper {
